feat(data-1211): add GTFS-RT config when mapping GTFS-RT TripUpdate to fill SIRI SM PublishedLineName with line number (route_short_name from GTFS) instead of line nam (route_long_name from GTFS)